# valometa-app

./: .gitignore  README.md  build-agents-table.py  build-matches-table.py  generate-sqlite-connection.py  install-airflow-valometa-env.sh  install-poetry-env.sh  load-db-and-tables.py  package-lock.json  pyproject.toml  run-app.sh  run-tests.sh  start-airflow-service.sh  streamlit-app.py
.github/workflows/: learn-github-actions.yml
scraping-scripts/: fix-patch-agents-table.py  update-agents-table.py  update-matches-table.py
tests/: conftest.py  test_endpoints.py  test_root.py  test_valometa.py
valometa/: __init__.py  scrape.py
valometa/airflow_dags/: __init__.py  create_agents_table.sql  create_matches_table.sql  dags.py
valometa/airflow_plugins/: __init__.py  create_tables.sql  operators.py
valometa/api/: __init__.py  routes.py  schemas.py
valometa/api/templates/: base.html  table.html
valometa/api/templates/js/: index.js
valometa/api/templates/js_frontend/: README.md  package-lock.json  package.json
valometa/api/templates/js_frontend/.parcel-cache/: data.mdb  lock.mdb
valometa/data/: __init__.py  vlr-gg.db
valometa/data/raw/: __init__.py  agents.txt  maps.txt  patches.txt
valometa/extractors/matches/: other.py  selectors.py
valometa/extractors/results/: other.py  selectors.py  single.py  special.py
valometa/models/: database.py
valometa/utils/: data.py
