[tool.poetry]
name = "valometa"
version = "0.1.0"
description = "Valorant Agent Meta tracking app bro"
authors = [
    "Kobe <harald.rockata@gmail.com>",
    "Bloop <ali.jad103@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.26.0"
pandas = "^1.3.4"
SQLAlchemy = "1.3.24"
pydantic = "^1.8.2"
parsel = "^1.6.0"
streamlit = "^1.5.0"
plotly = "^5.5.0"
loguru = "^0.6.0"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
python-multipart = "^0.0.5"
psycopg2 = "^2.9.3"
apache-airflow = "^2.2.4"
minify-html = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.27.0"
jupyter = "^1.0.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
